<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_emergency"
        android:title="@string/title_home" />

    <!--
    <item
        android:id="@+id/navigation_mainfeed"
        android:icon="@drawable/ic_mainfeed"
        android:title="@string/title_mainfeed" />-->

    <item
        android:id="@+id/navigation_crimemap"
        android:icon="@drawable/ic_radar"
        android:title="@string/title_crimemap" />

    <!--
   <item
       android:id="@+id/navigation_dashboard"
       android:icon="@drawable/ic_dashboard_black_24dp"
       android:title="@string/title_dashboard" />-->
   <item
       android:id="@+id/navigation_friendrequest"
       android:icon="@drawable/ic_friendrequest"
       android:title="@string/title_friend_request" />


   <item
       android:id="@+id/navigation_notifications"
       android:icon="@android:drawable/stat_sys_warning"
       android:title="@string/title_emergency_requests" />
</menu>
